--- a/index.html
+++ b/index.html
@@ -558,10 +558,10 @@
         </div>
 
         <div id="info" class="tab-content active">
-            <div class="info-box">
-                <h3>🌍 Bem-vindo ao Mundo Devastado de 2053</h3>
-                <p>A guerra nuclear devastou a Terra. A civilização como conhecíamos acabou. Nos escombros radioativos, sobreviventes lutam por recursos escassos, enfrentando mutações, cultos insanos e horrores despertados pela radiação. Crie seu investigador e prepare-se para enfrentar os Ecos da Terra Queimada.</p>
-            </div>
+       <div class="info-box">
+   <h3>🌴 Bem-vindo ao Brasil de 2053</h3>
+   <p>Trinta anos após o fim da Terceira Guerra Mundial, o Brasil emergiu como uma das poucas nações relativamente intactas. Enquanto o hemisfério norte se recupera lentamente, vivemos uma vida aparentemente normal entre as metrópoles tropicais e o interior preservado. Mas sob essa normalidade reconfortante, segredos perturbadores aguardam. Tecnologias esquecidas, cultos ressurgentes e verdades ocultas sobre a guerra espreitam nas sombras. Crie seu investigador e descubra o que realmente aconteceu... e o que ainda está por vir.</p>
+</div>
 
             <div class="section">
                 <h2>🎭 Informações do Investigador</h2>
