--- a/index.html
+++ b/index.html
@@ -558,9 +558,9 @@
         </div>
 
         <div id="info" class="tab-content active">
-       <div class="info-box">
-   <h3>🌴 Bem-vindo ao Brasil de 2053</h3>
-   <p>Trinta anos após o fim da Terceira Guerra Mundial, o Brasil emergiu como uma das poucas nações relativamente intactas. Enquanto o hemisfério norte se recupera lentamente, vivemos uma vida aparentemente normal entre as metrópoles tropicais e o interior preservado. Mas sob essa normalidade reconfortante, segredos perturbadores aguardam. Tecnologias esquecidas, cultos ressurgentes e verdades ocultas sobre a guerra espreitam nas sombras. Crie seu investigador e descubra o que realmente aconteceu... e o que ainda está por vir.</p>
+      <div class="info-box">
+   <h3>🌿 Bem-vindo a Itatiaia, 2053</h3>
+   <p>A Terceira Guerra Mundial varreu as grandes cidades do mundo. Mas aqui, nas montanhas entre Rio e São Paulo, a vida continua, de certa forma. Itatiaia e outras pequenas cidades remotas sobreviveram - longe demais dos alvos estratégicos, protegidas pela geografia, esquecidas pela guerra. Nos últimos anos, reconstruímos uma vida quase normal. Temos eletricidade da velha hidrelétrica, cultivamos nossa comida, e até restabelecemos contato com outros bolsões de sobreviventes. Para nossos filhos, este é o único mundo que conhecem - seguro, pequeno, mas nosso. Só que ultimamente, exploradores têm encontrado coisas estranhas nas ruínas das metrópoles mortas. E alguns juram que a destruição despertou algo que deveria ter permanecido adormecido.</p>
 </div>
 
             <div class="section">
