v06 with comfyui integration

--- a/generator.html
+++ b/generator.html
@@ -671,6 +671,11 @@
 <script src="js/skills-management.js"></script>
 <script src="js/dice-rolling.js"></script>
 <script src="js/character-sheet.js"></script>
-   
+
+<!-- Add after your existing script tags -->
+<script src="js/comfyui-integration.js"></script>
+<script src="js/background-generator.js"></script>
+
+
 </body>
 </html>
